--- a/index.html
+++ b/index.html
@@ -98,140 +98,156 @@
         </h1>
         <ul class="main_list">
             <li class="main_list-item">
-                <a class="main_link" href="">
-                    <img class="main_img" src="./img/1.jpg" alt="Товар" width="320px" height="477px">
-                </a>
-                <button class="img-button  img-button--display">
-                    Акция
-                </button>
-                <button class="img-button--color img-button--display">
-                    Подробнее
-                </button>
-                <h2 class="main_h2 main_h2--before">
-                    <!-- Встраиваемый светильник Markt -->
-                </h2>
-                <div class="div--flex">
-                    <span class="main_span main_span--color main_span--color1-before">
-                        <!-- 3 490 ₽ -->
-                    </span>
-                    <del class="main_span--two-color main_span--two-color1">
-                        5 060 ₽
-                    </del>
+                <div class="div--width">
+                    <a class="main_link" href="">
+                        <img class="main_img" src="./img/1.jpg" alt="Товар" width="320px" height="477px">
+                    </a>
+                    <button class="img-button  img-button--display">
+                        Акция
+                    </button>
+                    <button class="img-button--color img-button--display">
+                        Подробнее
+                    </button>
+                    <h2 class="main_h2 main_h2--before">
+                        <!-- Встраиваемый светильник Markt -->
+                    </h2>
+                    <div class="div--flex">
+                        <span class="main_span main_span--color main_span--color1-before">
+                            <!-- 3 490 ₽ -->
+                        </span>
+                        <del class="main_span--two-color main_span--two-color1">
+                            5 060 ₽
+                        </del>
+                    </div>
                 </div>
             </li>
             <li class="main_list-item">
-                <a class="main_link" href="">
-                    <img class="main_img" src="./img/2.jpg" alt="Товар" width="320" height="477">
-                </a>
-                <h2 class="main_h2">
-                    Линейный светильник ARG
-                </h2>
-                <span class="main_span">
-                    6 700 ₽
-                </span>
-            </li>
-            <li class="main_list-item">
-                <a class="main_link" href="">
-                    <img class="main_img" src="./img/3.jpg" alt="Товар" width="320" height="477">
-                </a>
-                <button class="img-button">
-                    Акция
-                </button>
-                <h2 class="main_h2">
-                    Сведодиодный светильник 
-                </h2>
-                <div class="div--flex">
-                    <span class="main_span main_span--color">
-                        5 060 ₽
-                    </span>
-                    <del class="main_span--two-color">
-                        6 060 ₽
-                    </del>
-                </div>
-            </li>
-            <li class="main_list-item">
-                <a class="main_link" href="">
-                    <img class="main_img" src="./img/1.jpg" alt="Товар" width="320" height="477">
-                </a>
-                <h2 class="main_h2 main_h2--before">
-                    <!-- Встраиваемый светильник Markt -->
-                </h2>
-                <span class="main_span main_span--color1-before">
-                    <!-- 3 490 ₽ -->
-                </span>
-            </li>
-            <li class="main_list-item">
-                <a class="main_link" href="">
-                    <img class="main_img" src="./img/2.jpg" alt="Товар" width="320" height="477">
-                </a>
-                <button class="img-button img--none">
-                    Акция
-                </button>
-                <h2 class="main_h2">
-                    Линейный светильник ARG
-                </h2>
-                <div class="div--flex">
-                    <span class="main_span main_span--color main_span--color2">
+                <div class="div--width">
+                    <a class="main_link" href="">
+                        <img class="main_img" src="./img/2.jpg" alt="Товар" width="320" height="477">
+                    </a>
+                    <h2 class="main_h2">
+                        Линейный светильник ARG
+                    </h2>
+                    <span class="main_span">
                         6 700 ₽
                     </span>
-                    <del class="main_span--two-color main_span--two-color1">
-                        6 060 ₽
-                    </del>
                 </div>
             </li>
             <li class="main_list-item">
-                <a class="main_link" href="">
-                    <img class="main_img" src="./img/3.jpg" alt="Товар" width="320" height="477">
-                </a>
-                <button class="img-button special">
-                    Акция
-                </button>
-                <h2 class="main_h2">
-                    Сведодиодный светильник 
-                </h2>
-                <span class="main_span main_span--two-color1">
-                    5 060 ₽
-                </span>
-                <div class="div--flex div--flex--destop">
-                    <span class="main_span main_span--color">
-                        5 060 ₽
-                    </span>
-                    <del class="main_span--two-color">
-                        6 060 ₽
-                    </del>
+                <div class="div--width">
+                    <a class="main_link" href="">
+                        <img class="main_img" src="./img/3.jpg" alt="Товар" width="320" height="477">
+                    </a>
+                    <button class="img-button">
+                        Акция
+                    </button>
+                    <h2 class="main_h2">
+                        Сведодиодный светильник 
+                    </h2>
+                    <div class="div--flex">
+                        <span class="main_span main_span--color">
+                            5 060 ₽
+                        </span>
+                        <del class="main_span--two-color">
+                            6 060 ₽
+                        </del>
+                    </div>
                 </div>
             </li>
             <li class="main_list-item">
-                <a class="main_link" href="">
-                    <img class="main_img img--none" src="./img/1.jpg" alt="Товар" width="320" height="477">
-                    <img class="main_img img--none1" src="./img/2.jpg" alt="Товар" width="320" height="477">
-                </a>
-                <button class="img-button img--none">
-                    Акция
-                </button>
-                <h2 class="main_h2 main_h2--before">
-                    <!-- Встраиваемый светильник Markt -->
-                </h2>
-                <div class="div--flex">
-                    <span class="main_span main_span--color before4">
+                <div class="div--width">
+                    <a class="main_link" href="">
+                        <img class="main_img" src="./img/1.jpg" alt="Товар" width="320" height="477">
+                    </a>
+                    <h2 class="main_h2 main_h2--before">
+                        <!-- Встраиваемый светильник Markt -->
+                    </h2>
+                    <span class="main_span main_span--color1-before">
                         <!-- 3 490 ₽ -->
                     </span>
-                    <del class="main_span--two-color main_span--two-color1 before4">
-                        <!-- 6 060 ₽ -->
-                    </del>
                 </div>
             </li>
             <li class="main_list-item">
-                <a class="main_link" href="">
-                    <img class="main_img img--none" src="./img/2.jpg" alt="Товар" width="320" height="477">
-                    <img class="main_img img--none1" src="./img/1.jpg" alt="Товар" width="320" height="477">
-                </a>
-                <h2 class="main_h2 before1">
-                    <!-- Линейный светильник ARG -->
-                </h2>
-                <span class="main_span before">
-                    <!-- 6 700 ₽ -->
-                </span>
+                <div class="div--width">
+                    <a class="main_link" href="">
+                        <img class="main_img" src="./img/2.jpg" alt="Товар" width="320" height="477">
+                    </a>
+                    <button class="img-button img--none">
+                        Акция
+                    </button>
+                    <h2 class="main_h2">
+                        Линейный светильник ARG
+                    </h2>
+                    <div class="div--flex">
+                        <span class="main_span main_span--color main_span--color2">
+                            6 700 ₽
+                        </span>
+                        <del class="main_span--two-color main_span--two-color1">
+                            6 060 ₽
+                        </del>
+                    </div>
+                </div>
+            </li>
+            <li class="main_list-item">
+                <div class="div--width">
+                    <a class="main_link" href="">
+                        <img class="main_img" src="./img/3.jpg" alt="Товар" width="320" height="477">
+                    </a>
+                    <button class="img-button special">
+                        Акция
+                    </button>
+                    <h2 class="main_h2">
+                        Сведодиодный светильник 
+                    </h2>
+                    <span class="main_span main_span--two-color1">
+                        5 060 ₽
+                    </span>
+                    <div class="div--flex div--flex--destop">
+                        <span class="main_span main_span--color">
+                            5 060 ₽
+                        </span>
+                        <del class="main_span--two-color">
+                            6 060 ₽
+                        </del>
+                    </div>
+                </div>
+            </li>
+            <li class="main_list-item">
+                <div class="div--width">
+                    <a class="main_link" href="">
+                        <img class="main_img img--none" src="./img/1.jpg" alt="Товар" width="320" height="477">
+                        <img class="main_img img--none1" src="./img/2.jpg" alt="Товар" width="320" height="477">
+                    </a>
+                    <button class="img-button img--none">
+                        Акция
+                    </button>
+                    <h2 class="main_h2 main_h2--before">
+                        <!-- Встраиваемый светильник Markt -->
+                    </h2>
+                    <div class="div--flex">
+                        <span class="main_span main_span--color before4">
+                            <!-- 3 490 ₽ -->
+                        </span>
+                        <del class="main_span--two-color main_span--two-color1 before4">
+                            <!-- 6 060 ₽ -->
+                        </del>
+                    </div>
+                </div>
+            </li>
+            <li class="main_list-item">
+                <div class="div--width">
+                    <a class="main_link" href="">
+                        <img class="main_img img--none" src="./img/2.jpg" alt="Товар" width="320" height="477">
+                        <img class="main_img img--none1" src="./img/1.jpg" alt="Товар" width="320" height="477">
+                    </a>
+                    <h2 class="main_h2 before1">
+                        <!-- Линейный светильник ARG -->
+                    </h2>
+                    <span class="main_span before">
+                        <!-- 6 700 ₽ -->
+                    </span>
+                </div>
             </li>
         </ul>
     </main>
@@ -244,7 +260,7 @@
                              </svg>
                          </a>
                      </li>
-                     <li class="footer_list-list-item">
+                     <li class="footer_list-list-item footer_list-list-item--flex">
                          <p class="paragraph">
                              Этот сайт защищен от спама службой <br> reCAPTCHA Google. Политика <br> конфиденциальности/Условия <br>предоставления услуг
                          </p>
