--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 <button class="img-button img--none">
                     Акция
                 </button>
-                <h2 class="main_h2 main_h2--before">
+                <h2 class="main_h2 main_h2--before5">
                     <!-- Встраиваемый светильник Markt -->
                 </h2>
                 <div class="div--flex">
